# fgptool

./: CMakeLists.txt  README.md  create_sln.bat
.github/workflows/: build.yml
ext/: _ext.cmake
res/: logo.xcf
src/: fgptool.cpp
